config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,5 +28,6 @@
             "url": "/faq",
             "style": "link"
         }
-    ]
+    ],
+    "domain": "https://smart-jupiter-d2e49.netlify.app"
 }
